# forge-experience-design

./: .gitignore  =1.0.0  COMO_FUNCIONA.md  EXPLICACAO_FLUXO.md  FINAL_CHECKLIST.md  FLUXO_COMPLETO.md  FLUXO_EXPLICADO.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  README_FRONTEND.md  RESPOSTA_COMPLETA.md  RESPOSTA_FLUXO.md  TESTE_COMPLETO.md  TESTE_FINAL.md  TESTE_RESULTADO.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh  start-dev.sh  start.sh  test_integration.py
backend/: main.py
backend/api/: __init__.py  app.py
backend/api/routes/: fixes.py
backend/api/schemas/: __init__.py
backend/config/: __init__.py  project_config.py
backend/domain/: diff_generator.py  fix_engine.py  fix_rule.py  fix_validator.py  monitor.py
backend/infrastructure/: forge_logs_client.py
backend/infrastructure/ai/: __init__.py  fix_generator.py  html_analyzer.py  llm_service.py
backend/infrastructure/source/: __init__.py  css_modifier.py  file_locator.py  patch_applier.py  source_analyzer.py
backend/infrastructure/storage/: __init__.py  fix_repository.py
backend/scripts/: init_db.py
docs/: FORGELOGS_INTEGRATION.md  integration.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: fix-injector.js  test_page.html
frontend/src/: App.tsx
frontend/src/components/: ApplyFixDialog.tsx  Dashboard.tsx  FixHistory.tsx  FixPreview.tsx  FixesList.tsx  (+1 more)
test/: README_TESTES.md  test_automated.py  test_real_forgetest.py  test_source_fixes.py  test_source_fixes_direct.py  test_with_playwright.py
(+6 files in other folders)
